# AI-Powered-Customer-Support-Ticket

./: .gitignore  Dockerfile  GUIDE.md  HUGGINGFACE_DEPLOYMENT.md  README.md  RUN_LOCALLY.md  __init__.py  inference.py  openenv.yaml  pyproject.toml  run_agent.bat  support_environment.py  test_e2e.py  test_endpoints.py  validate_submission.sh
env/: __init__.py  client.py  graders.py  models.py  ticket_data.py
env/server/: Dockerfile  app.py
