[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "AI-Powered Customer Support Ticket Resolution Environment for OpenEnv"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]
inference = [
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["env*"]
